# cryptoaction-kyc

./: .env.example  compose.yml
app/: pyproject.toml
app/config/: __init__.py
app/db/: db.py  kyc_repository.py  models.py
app/kyc/: kyc.py  kyc_route.py
app/src/: main.py
app/src/config/: __init__.py
app/src/db/: kyc_repository.py  models.py
app/src/kyc/: kyc.py  kyc_route.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/auth/: client_config.py  deps.py  discovery.py
backend/app/config/: __init__.py
backend/app/db/: kyc_repository.py  models.py
backend/app/ipfs/: client.py  file_route.py
backend/app/kyc/: kyc.py  kyc_route.py
backend/app/utils/: __init__.py
db/initdb.d/: 00-create-tables.sh
frontend/: eslint.config.ts  index.html  package-lock.json  package.json
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/api/: base.ts  file.ts  kyc.ts
frontend/src/auth/: authProvider.ts  authProvider.tsx  keycloak.ts
frontend/src/components/forms/: file-upload.tsx  submit-button.tsx  text-field.tsx
frontend/src/components/layout/: footer.tsx  header.tsx
frontend/src/components/pages/: admin-page.tsx  loading-page.tsx  user-page.tsx
frontend/src/components/ui/: attachment.tsx  badge.tsx  button.tsx  field.tsx  navigation-menu.tsx  spinner.tsx  table.tsx
frontend/src/config/: queryKeys.ts  vars.ts
frontend/src/hooks/: form-context.tsx  form.tsx
frontend/src/routes/: __root.tsx  admin.tsx  index.tsx  user.tsx
frontend/src/types/: kyc.ts
smart-contracts/: package-lock.json  package.json
(+15 files in other folders)
