[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-keycloak>=7.1.1",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
[tool.fastapi]
entrypoint = "src.main:app"
