[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioipfs>=0.7.1",
    "cachetools>=7.1.4",
    "fastapi[standard]>=0.137.2",
    "httpx>=0.28.1",
    "psycopg>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-keycloak>=7.1.1",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
]
[tool.fastapi]
entrypoint = "app.main:app"
